Fix visibility

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,10 @@
     color: #fff;
     /*padding: 0.5rem;*/
     text-align: center;
+    /* fix location */
+    position: fixed;
+    z-index: 5000;
+    width: 100%;
 }
 
 .navbar {
@@ -67,5 +71,19 @@ nav .button-collapse i {
     font-size: 2.7rem;
     height: 56px;
     line-height: 56px;
+}
+
+/* lateral nav*/
+#side-nav {
+    left: -240px;
+}
+
+#nav-profile {
+    position: relative;
+    top: 10px;
+    margin-bottom: 20px;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
 }
 
