--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -2,6 +2,7 @@
     text-align: center;
     padding: 20px;
     font-family: 'Arial', sans-serif;
+    padding-top: 50px;
 }
 
 .home-page h1 {
